--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,149 @@
-body {
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  box-sizing: inherit;
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: monospace, cursive, 'Courier New', Courier;
+}
+
+ul {
+  list-style-type: none;
+}
+
+header {
+  background-color: #21cfaf;
+  color: #fff;
+  padding: 2rem 0;
+  font-size: 2.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 4rem 2rem;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  color: #fff;
+  transition: all 150ms ease 75ms;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.8rem;
+  font-size: 2rem;
+  cursor: pointer;
+  border-radius: 20rem;
+}
+
+.green {
+  background-color: #21cfaf;
+}
+
+.pink {
+  background-color: #d646a1;
+}
+
+.btn:hover {
+  box-shadow: 0.1rem 0.1rem 0.4rem rgba(0, 0, 0, 0.2);
+  transform: scale(0.98);
+}
+
+.green:hover {
+  background-color: #2c9694;
+}
+.pink:hover {
+  background-color: #b1287f;
+}
+
+.select-wrapper {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  font-size: 2.4rem;
+}
+
+.select-wrapper select {
+  background-color: #c0bb34;
+  border: none;
+  outline: none;
+  color: #fff;
+  transition: all 150ms ease 75ms;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.4rem 0.8rem;
+  font-size: 2rem;
+  cursor: pointer;
+  border-radius: 20rem;
+}
+
+form {
+  box-shadow: 0.1rem 0.1rem 0.4rem rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  border-radius: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 50rem;
+  font-size: 2rem;
+}
+form input {
+  width: 100%;
+  border-radius: 1.2rem;
+  border: 0.1rem solid rgba(0, 0, 0, 0.2);
+  font-size: inherit;
+  outline: none;
+  padding: 0.4rem 1rem;
+  font-family: inherit;
+}
+form button {
+  width: 100%;
+}
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.todo-list li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 2rem;
+}
+
+.todo-list span {
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+.todo-list input[type='checkbox'] {
+  accent-color: #93d4a4ed;
+  cursor: pointer;
+  width: 1.6rem;
+  height: 1.6rem;
 }
