Refactor: Todo list styles

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ form button {
 .todo-list {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
 }
 
